# lmms-lab-writer

./: .gitignore  README.md  README_ja.md  README_zh.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
.tmp-aurtest/aur-dist/lmms-lab-writer-bin/: .SRCINFO  PKGBUILD  README.md
apps/api-server/: Cargo.toml
apps/api-server/src/: main.rs
apps/chrome-extension/: background.js  content.js  manifest.json  mock_listener.js  popup.html  popup.js
apps/chrome-extension/.ralph/: agent_embeddings.json
apps/chrome-extension/canvas-extractor/: Cargo.toml  README.md  design.md  prd.md  progress.json  tasks.json
apps/chrome-extension/canvas-extractor/.ralph/: last_loop_error.txt
apps/chrome-extension/canvas-extractor/src/: downloader.rs  extractor.rs  logger.rs  main.rs  models.rs  parser.rs  videos.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  DMG-BACKGROUND.md  tauri.conf.json
apps/desktop/src-tauri/src/: adk_server.rs  lib.rs
apps/desktop/src-tauri/src/commands/: git.rs  latex.rs  terminal.rs
apps/desktop/src/app/: page.tsx
apps/desktop/src/components/latex/: latex-settings-dialog.tsx
apps/desktop/src/lib/: path.test.ts
apps/video/: package.json
apps/web/: .gitignore  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css
apps/web/src/components/: download-sections.tsx
apps/web/src/lib/: i18n.test.ts
scripts/: build-pkg.sh  generate-aur-bin-package.mjs  release.sh  sync-version.mjs  upload-to-github-release.sh
(+2 files in other folders)
